# myfridge

./: .env.dev  Cargo.toml  docker-compose.dev.yaml
myfridge/: Cargo.toml
myfridge-domain/: Cargo.toml
myfridge-domain/src/: email.rs  ingredient.rs  lib.rs  unit.rs
myfridge-migration/: Cargo.toml
myfridge-migration/src/: lib.rs  m20220101_000001_create_table.rs  m20260310_204638_add_virtual_fridge.rs
myfridge-model/: Cargo.toml
myfridge-model/src/: lib.rs  prelude.rs  user.rs  virtual_fridge_item.rs
myfridge/src/: api_route.rs  app.rs  auth_user.rs  config.rs  jwt.rs  lib.rs  logger.rs  main.rs
myfridge/src/api/: error.rs  mod.rs
myfridge/src/api/auth/: login.rs  register.rs
myfridge/src/api/virtual_fridge/: add_item.rs  delete_item.rs  edit_item.rs  get_content.rs  mod.rs
ui/: app.json  babel.config.js  index.ts  lingui.config.js  package-lock.json  package.json  tsconfig.json
ui/src/: store.ts  unistyles.ts
ui/src/api/: auth.ts  index.ts  virtual_fridge.ts
ui/src/app/: +html.tsx  _layout.tsx
ui/src/app/(auth)/: _layout.tsx  login.tsx  register.tsx
ui/src/app/(tabs)/: _layout.tsx  account.tsx  index.tsx  my-fridge.tsx
ui/src/components/: AuthContainer.tsx  AuthLink.tsx  InputQuantity.tsx  PageContainer.tsx
ui/src/components/ui/: ActivityIndicator.tsx  Button.tsx  ButtonBase.tsx  ButtonBase.web.tsx  ButtonBaseImpl.tsx  Card.tsx  CardTitle.tsx  ControlTextInput.tsx  DropDown.tsx  DropDown.web.tsx  Icon.tsx  (+20 more)
ui/src/constants/: enum.ts  themes.ts
ui/src/contexts/: useAuth.tsx
ui/src/hooks/: use-redux.ts
ui/src/reducers/: auth.ts
(+3 files in other folders)
