[package]
name = "myfridge"
version = "0.1.0"
edition = "2024"

[dependencies]
myfridge-migration.workspace = true
myfridge-model.workspace = true
myfridge-domain.workspace = true

actix-web.workspace = true
sea-orm.workspace = true
sea-orm-migration.workspace = true
envy.workspace = true
dotenvy.workspace = true
serde.workspace = true
tracing.workspace = true
tracing-log.workspace = true
tracing-subscriber.workspace = true
pbkdf2.workspace = true
anyhow.workspace = true
thiserror.workspace = true
jsonwebtoken.workspace = true
time.workspace = true
base64.workspace = true
